# scPerturb-CMap

./: .gitignore  CONTRIBUTING.md  DATA_NOTES.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.hydra/: config.yaml  hydra.yaml  overrides.yaml
artifacts/: best.pt  metrics.json
conf/: train.yaml
docs/: hpc.md
examples/data/: demo_gene_sets.json  lincs_demo.parquet  mechanisms.parquet
outputs/2025-09-04/22-01-06/.hydra/: config.yaml  hydra.yaml
scripts/: check_acceptance.py  download_lincs.sbatch  make_demo_h5ad.py  make_target.sbatch  prepare_lincs.sbatch  prepare_lincs_subset.py  print_demo_stats.py  score_real.sbatch  setup_hpc.sh  train_metric.sbatch  ui_hpc.sh
src/scperturb_cmap/: __init__.py  cli.py
src/scperturb_cmap/api/: score.py
src/scperturb_cmap/data/: signatures.py
src/scperturb_cmap/io/: schemas.py  serde.py
src/scperturb_cmap/models/: train.py
src/scperturb_cmap/ui/: app.py
src/scperturb_cmap/utils/: device.py
src/scperturb_cmap/viz/: plots.py
tests/: conftest.py  test_baseline.py  test_cli.py  test_device.py  test_schemas.py  test_signatures.py
