[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "scPerturb-CMap"
version = "0.1.0"
description = "scPerturb-CMap: ML utilities and tools for perturbational profiling."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "scPerturb-CMap Authors" }
]
dependencies = [
  "anndata",
  "scanpy",
  "pandas",
  "numpy",
  "scikit-learn",
  "torch",
  "umap-learn",
  "gseapy",
  "pydantic>=2",
  "plotly",
  "streamlit",
  "hydra-core",
  "pyarrow",
  "typer",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
]

[project.scripts]
scperturb-cmap = "scperturb_cmap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
